tests/baselines/reference/generatorTypeCheck28.errors.txt
tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck28.ts(2,13): error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.


==== tests/cases/conformance/es6/yieldExpressions/generatorTypeCheck28.ts (1 errors) ====
    function* g(): IterableIterator<(x: string) => number> {
        yield * {
                ~
            *[Symbol.iterator]() {
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
                yield x => x.length;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
            }
    ~~~~~~~~~
        };
    ~~~~~
!!! error TS2488: Type must have a '[Symbol.iterator]()' method that returns an iterator.
    }